# simple_3d_vector

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  tests.rs
