[package]
name = "simple_3d_vector"
description = "Simple three-dimensional vectors in Rust"
version = "0.1.0"
edition = "2021"
authors = ["Theboiboi8 <kamela_ae@proton.me>"]
rust-version = "1.56.1"
license = "MIT"
repository = "https://github.com/Theboiboi8/simple_3d_vector"
keywords = ["vector", "math", "three-dimensional"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_2d_vector = "0.2"